--- a/.github/workflows/java.yaml
+++ b/.github/workflows/java.yaml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Java Test CI
 
 on: [push]
 
@@ -13,6 +13,6 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+      - name: Test with Maven
+        run: mvn test -f "pom.xml"
 
